--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: The Code Bay
 url: "thecodebay.com"
 #twitter_username: 
 #github_username: 
-
+google_analytics: G-DBTSJYMT8T
 # Build settings
 theme: minima
 plugins:
