--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,10 @@ google_analytics: G-DBTSJYMT8T
 theme: minima
 plugins:
   - jekyll-feed
+collections:
+  tags:
+    output: true
+    permalink: tags/:path/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
