--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ collections:
   tags:
     output: true
     permalink: tags/:path/
-
+timezone: Poland
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
